add and delete buttons

--- a/Red-Black_Tree/src/main/resources/gui.fxml
+++ b/Red-Black_Tree/src/main/resources/gui.fxml
@@ -3,21 +3,29 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nahap.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nahap.Controller">
     <children>
-        <ScrollPane fx:id="scrollPane" layoutX="422.0" prefHeight="400.0" prefWidth="178.0"
-                    AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" AnchorPane.bottomAnchor="10.0">
+        <ScrollPane fx:id="scrollPane" layoutX="422.0" layoutY="11.2" prefHeight="379.0" prefWidth="240.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="11.0">
             <content>
-                <Button mnemonicParsing="false" text="Кнопка" />
+                <VBox prefHeight="363.0" prefWidth="234.0">
+                    <children>
+                        <HBox prefHeight="46.0" prefWidth="224.0">
+                            <children>
+                                <TextField fx:id="textField" prefHeight="26.0" prefWidth="78.0" />
+                                <Button fx:id="addButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="94.0" text="Добавить" onAction="#handleAdd" />
+                                <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="75.0" text="Удалить" onAction="#handleDelete" />
+
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
             </content>
         </ScrollPane>
-        <Canvas fx:id="canvas" layoutX="10.0" layoutY="10.0"
-                AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0"
-                AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="200.0"/>
-
+        <Canvas fx:id="canvas" layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="10.0" />
     </children>
 </AnchorPane>
