--- a/RedBlackTree/src/main/resources/gui.fxml
+++ b/RedBlackTree/src/main/resources/gui.fxml
@@ -9,26 +9,35 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nahap.gui.controller.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
+            prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.nahap.gui.controller.Controller">
     <children>
-        <ScrollPane fx:id="scrollPane" layoutX="422.0" layoutY="11.2" prefHeight="379.0" prefWidth="240.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="11.0">
+        <!-- Панель для управления деревом -->
+        <ScrollPane fx:id="scrollPane" layoutX="10.0" layoutY="10.0" prefHeight="580.0" prefWidth="240.0"
+                    AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <content>
-                <VBox prefHeight="363.0" prefWidth="234.0">
+                <VBox prefHeight="580.0" prefWidth="234.0">
                     <children>
                         <HBox prefHeight="46.0" prefWidth="224.0">
                             <children>
-                                <TextField fx:id="textField" prefHeight="26.0" prefWidth="78.0" />
-                                <Button fx:id="addButton" mnemonicParsing="false" onAction="#handleAdd" prefHeight="26.0" prefWidth="94.0" text="Добавить" />
-                                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#handleDelete" prefHeight="26.0" prefWidth="75.0" text="Удалить" />
+                                <TextField fx:id="textField" prefHeight="26.0" prefWidth="78.0"/>
+                                <Button fx:id="addButton" mnemonicParsing="false" onAction="#handleAdd"
+                                        prefHeight="26.0" prefWidth="94.0" text="Добавить"/>
+                                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#handleDelete"
+                                        prefHeight="26.0" prefWidth="75.0" text="Удалить"/>
                             </children>
                         </HBox>
-                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSave" prefHeight="26.0" prefWidth="233.0" text="Сохранить в SVG" />
+                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSave" prefHeight="26.0"
+                                prefWidth="233.0" text="Сохранить в SVG"/>
                     </children>
                 </VBox>
             </content>
         </ScrollPane>
-        <Pane fx:id="canvasContainer" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="260.0" AnchorPane.topAnchor="10.0">
-            <Canvas fx:id="canvas" />
+
+        <Pane fx:id="canvasContainer" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
+              AnchorPane.rightAnchor="260.0" AnchorPane.topAnchor="10.0">
+            <Canvas fx:id="canvas"/>
         </Pane>
     </children>
 </AnchorPane>
