--- a/RedBlackTree/src/main/resources/gui.fxml
+++ b/RedBlackTree/src/main/resources/gui.fxml
@@ -1,43 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
-            prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nahap.gui.controller.Controller">
-    <children>
-        <!-- Панель для управления деревом -->
-        <ScrollPane fx:id="scrollPane" layoutX="10.0" layoutY="10.0" prefHeight="580.0" prefWidth="240.0"
-                    AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-            <content>
-                <VBox prefHeight="580.0" prefWidth="234.0">
-                    <children>
-                        <HBox prefHeight="46.0" prefWidth="224.0">
-                            <children>
-                                <TextField fx:id="textField" prefHeight="26.0" prefWidth="78.0"/>
-                                <Button fx:id="addButton" mnemonicParsing="false" onAction="#handleAdd"
-                                        prefHeight="26.0" prefWidth="94.0" text="Добавить"/>
-                                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#handleDelete"
-                                        prefHeight="26.0" prefWidth="75.0" text="Удалить"/>
-                            </children>
-                        </HBox>
-                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSave" prefHeight="26.0"
-                                prefWidth="233.0" text="Сохранить в SVG"/>
-                    </children>
-                </VBox>
-            </content>
-        </ScrollPane>
+    <HBox spacing="10" AnchorPane.topAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.leftAnchor="10">
+        <TextField fx:id="textField" prefWidth="100"/>
+        <Button text="Добавить" onAction="#handleAdd"/>
+        <Button text="Удалить" onAction="#handleDelete"/>
+        <Button text="Сохранить в SVG" onAction="#handleSave"/>
+    </HBox>
 
-        <Pane fx:id="canvasContainer" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0"
-              AnchorPane.rightAnchor="260.0" AnchorPane.topAnchor="10.0">
+    <ScrollPane fx:id="scrollPane" AnchorPane.topAnchor="50" AnchorPane.bottomAnchor="10"
+                AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
+        <Pane fx:id="canvasContainer">
             <Canvas fx:id="canvas"/>
         </Pane>
-    </children>
+    </ScrollPane>
 </AnchorPane>
